# medusa-cut

./: .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  design-qa.md  pyproject.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: release.yml
agent/: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
agent/docs/: TARGET_STYLE.md
agent/scripts/: build_engine.sh
agent/src/medusacut/: llm.py  local.py  pipeline.py  thumbnail.py  types.py
agent/src/medusacut/caption/: karaoke.py
agent/src/medusacut/hooks/: base.py  propose.py
agent/src/medusacut/ingest/: youtube.py
agent/src/medusacut/reframe/: compose.py  facecam.py  layouts.py  saliency.py  scene_layout.py
agent/src/medusacut/signals/: fusion.py  motion.py  scene.py
agent/src/medusacut/transcribe/: whisper.py
agent/src/medusacut/worker/: __init__.py  client.py  crypto.py  run.py  storage.py
agent/tests/: test_llm.py  test_merge_pool.py  test_motion.py  test_pipeline.py  test_propose.py  test_reframe.py  test_render_panel.py  test_thumbnail.py
desktop/: main.js  package-lock.json  package.json  preload.js
desktop/renderer/: app.js  changelog.js  index.html  legal.js  styles.css
desktop/scripts/: afterPack.js  build_app.sh  dev_engine.sh
docs/: ARCHITECTURE.md  ROADMAP.md  SETUP.md
docs/legal/: politica-de-privacidade.md  termos-de-uso.md
src/medusacut/: __init__.py  cli.py  llm.py  pipeline.py  preprocess.py  types.py
src/medusacut/caption/: __init__.py  karaoke.py
src/medusacut/hooks/: __init__.py  base.py
src/medusacut/ingest/: __init__.py  youtube.py
src/medusacut/reframe/: __init__.py  compose.py  layouts.py  saliency.py
src/medusacut/render/: __init__.py  ffmpeg.py
src/medusacut/signals/: __init__.py  audio_energy.py  fusion.py  scene.py
src/medusacut/transcribe/: __init__.py
src/medusacut/ui/: __init__.py  app.py
supabase/migrations/: 0001_legal_acceptances.sql  0002_jobs.sql  0003_fix_claim_job.sql  0004_cost_and_description.sql  0006_source_kind.sql
tests/: test_caption.py  test_fusion.py  test_llm.py  test_reframe.py
web/: .env.example  next.config.mjs  package-lock.json  package.json
web/app/: download-picker.tsx  globals.css  layout.tsx  medusa-logo.tsx  page.tsx
web/app/apoiar/: page.tsx
web/app/app/: icons.tsx  page.tsx  sidebar.tsx
web/app/login/: page.tsx
web/lib/: r2.ts
web/public/: cuts.webm  hero.webm
(+8 files in other folders)
