[project]
name = "medusa-cut"
version = "0.0.1"
description = "Medusa Cut — ferramenta pessoal de cortes de gameplay a partir de links do YouTube"
requires-python = ">=3.11"
dependencies = [
    # Versoes EXATAS de proposito (o stack de ML e fragil) — ver CLAUDE.md.
    "yt-dlp==2026.6.9",       # baixar video + (se houver) chat replay do YouTube
    "faster-whisper==1.2.1",  # transcricao com timestamps por palavra (M2)
    "ffmpeg-python==0.2.0",   # preprocess + render
    "scenedetect==0.7",       # troca de cena (sinal de gameplay) (M4)
    "numpy==2.4.6",
    "openai==2.42.0",         # ganchos via LLM (M3; troque conforme provedor)
    "pillow==12.2.0",         # legenda karaoke (desenho); ffmpeg local nao tem libass
    "supabase==2.31.0",       # worker: fila de jobs + storage (SaaS)
    "cryptography==49.0.0",   # worker: decifra a chave de API do usuario (AES-GCM)
]

[project.optional-dependencies]
dev = ["pytest==8.4.1"]
# painel local antigo (uso pessoal). No SaaS o motor roda como worker, sem Streamlit.
ui = ["streamlit==1.58.0"]

[project.scripts]
medusacut = "medusacut.cli:app"
medusacut-worker = "medusacut.worker.run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/medusacut"]
